CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Chapter1)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.hpp")
FILE(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_LIBRARY(chapter1 ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(chapter1 TKernel TKMath)

FILE(GLOB RUNNERSOURCES "${CMAKE_CURRENT_SOURCE_DIR}/runners/*.cpp")

FOREACH(RUNNERSOURCE ${RUNNERSOURCES})

	CreateExecutable(${RUNNERSOURCE} chapter1 TKernel TKMath)

ENDFOREACH(RUNNERSOURCE)

ADD_CUSTOM_COMMAND(TARGET chapter1_2
		   POST_BUILD
		   COMMAND ${CMAKE_COMMAND} -E copy_directory
		   "${CMAKE_CURRENT_SOURCE_DIR}/python"
		   "${CMAKE_CURRENT_BINARY_DIR}")
